--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="calculator-container">
+        <div class="display"></div>
+        <div class="button-container">
+            <button class="clear">AC</button>
+            <button class="plus-minus">+/-</button>
+            <button class="percentage">%</button>
+            <button class="divide">/</button>
+            <button class="num7">7</button>
+            <button class="num8">8</button>
+            <button class="num9">9</button>
+            <button class="multiply">*</button>
+            <button class="num4">4</button>
+            <button class="num5">5</button>
+            <button class="num6">6</button>
+            <button class="subtract">-</button>
+            <button class="num1">1</button>
+            <button class="num2">2</button>
+            <button class="num3">3</button>
+            <button class="add">+</button>
+            <button class="num0">0</button>
+            <button class="decimal">.</button>
+            <button class="equal">=</button>
+        </div>
+    </div>
 </body>
 </html>
