Change styling of buttons and calculator colors

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <div class="calculator-container">
         <div class="display"></div>
         <div class="button-container">
-            <button class="clear">AC</button>
-            <button class="plus-minus">+/-</button>
-            <button class="percentage">%</button>
-            <button class="divide">/</button>
-            <button class="num7">7</button>
-            <button class="num8">8</button>
-            <button class="num9">9</button>
-            <button class="multiply">*</button>
-            <button class="num4">4</button>
-            <button class="num5">5</button>
-            <button class="num6">6</button>
-            <button class="subtract">-</button>
-            <button class="num1">1</button>
-            <button class="num2">2</button>
-            <button class="num3">3</button>
-            <button class="add">+</button>
-            <button class="num0">0</button>
-            <button class="decimal">.</button>
-            <button class="equal">=</button>
+            <button class="clear operator">AC</button>
+            <button class="plus-minus operator">+/-</button>
+            <button class="percentage operator">%</button>
+            <button class="divide operator">/</button>
+            <button class="num7 operand">7</button>
+            <button class="num8 operand">8</button>
+            <button class="num9 operand">9</button>
+            <button class="multiply operator">*</button>
+            <button class="num4 operand">4</button>
+            <button class="num5 operand">5</button>
+            <button class="num6 operand">6</button>
+            <button class="subtract operator">-</button>
+            <button class="num1 operand">1</button>
+            <button class="num2 operand">2</button>
+            <button class="num3 operand">3</button>
+            <button class="add operator">+</button>
+            <button class="num0 operand">0</button>
+            <button class="decimal operand">.</button>
+            <button class="equal operator">=</button>
         </div>
     </div>
 </body>
