Add event listeners on all buttons

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 </head>
 <body>
     <div class="calculator-container">
-        <div class="display"></div>
+        <div class="display">0</div>
         <div class="button-container">
-            <button class="clear operator">AC</button>
-            <button class="plus-minus operator">+/-</button>
-            <button class="percentage operator">%</button>
-            <button class="divide operator">/</button>
-            <button class="num7 operand">7</button>
-            <button class="num8 operand">8</button>
-            <button class="num9 operand">9</button>
-            <button class="multiply operator">*</button>
-            <button class="num4 operand">4</button>
-            <button class="num5 operand">5</button>
-            <button class="num6 operand">6</button>
-            <button class="subtract operator">-</button>
-            <button class="num1 operand">1</button>
-            <button class="num2 operand">2</button>
-            <button class="num3 operand">3</button>
-            <button class="add operator">+</button>
-            <button class="num0 operand">0</button>
-            <button class="decimal operand">.</button>
-            <button class="equal operator">=</button>
+            <button class="clear operations" value = 'clear'>AC</button>
+            <button class="sign operations" value = 'sign'>+/-</button>
+            <button class="percent operations" value = 'percent'>%</button>
+            <button class="divide operator" value="/">/</button>
+            <button class="operand" value = '7'>7</button>
+            <button class="operand" value = '8'>8</button>
+            <button class="operand" value = '9'>9</button>
+            <button class="multiply operator" value="*">*</button>
+            <button class="operand" value = '4'>4</button>
+            <button class="operand" value = '5'>5</button>
+            <button class="operand" value = '6'>6</button>
+            <button class="subtract operator" value="-">-</button>
+            <button class="operand" value = '1'>1</button>
+            <button class="operand" value = '2'>2</button>
+            <button class="operand" value = '3'>3</button>
+            <button class="add operator" value="+">+</button>
+            <button class="num0 operand" value = '0'>0</button>
+            <button class="decimal operand" value = ".">.</button>
+            <button class="equal operator" value="=">=</button>
         </div>
     </div>
 </body>
