Add operator check logic against operators array

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="calculator-container">
-        <div class="display">0</div>
+        <div class="display"></div>
         <div class="button-container">
             <button class="clear operations" value = 'clear'>AC</button>
             <button class="sign operations" value = 'sign'>+/-</button>
