Add backspace function, decimal function, divide by zero check

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="display"></div>
         <div class="button-container">
             <button class="clear operations" value = 'clear'>AC</button>
-            <button class="sign operations" value = 'sign'>+/-</button>
+            <button class="backspace operations" value = 'backspace'>←</button>
             <button class="percent operations" value = 'percent'>%</button>
             <button class="divide operator" value="/">/</button>
             <button class="operand" value = '7'>7</button>
